		methods inside an invokeAndWait. 
	Added rotation to Flockers
	mason.bat no longer includes the -server directive, which breaks Windows 7
	Deprecated getClipLocation
	Made ParallelSequence and AsynchronousSteppable's threads daemon
	Added the cleanup() method to ParallelSequence and added documentation explaining why
		and how you should use this method. 
	Added the destroysThreads flags to ParallelSequence and added documentation explaining
		why and how you should use this method.
	Tweaked HeatBugs and HexaBugs so that they call cleanup() on their ParallelSequences
	Added the Manipulating2D interface to avoid passing Display2D directly to
		SimplePortrayal2D subclasses.
	Added preferences to SimplePortrayal2D
	Console and SimpleController possibly call init(...) inside an invokeAndWait to 
		guarantee it happens on the Swing Event Thread.
	Additions to ChartGenerator.  Thanks to Paul Smaldino <paul.smaldino@gmail.com> and
		Joey Harrison <jharri@gmu.edu>
	Set up make dist to automatically remove sim/util/datacul
	Added the sim/util/distribution package
	Added Prefs class -- oops
	Added a 'seed' variable to SimState -- basically retaining the seed used to construct
		the random number generator.  This is only used for the GUI to know what the
		seed was so it can display it in the Console.  Also modified the Console so
		that startSimulation() doesn't replace the generator.  The generator is only
		replaced if the user changes the number if the field or if the stop() button
		is pressed thus incrementing the field.  This allows easy visualization of
		a simulation with a specific predefined random number generator seed.  All you
		have to do is change the constructor of your GUIState subclass so that it
		creates the model with a fixed seed and the visualization will see it also.
		For example, public FlockersWithUI() { super(new Flockers(15)); }
	Modified the seed field in the Console to accept a long, but warn the user that
		a long seed was provided.